[package]
name = "rick-and-morty-api"
version = "0.1.0"
edition = "2021"
authors = ["Miguel Guarniz"]
description = "Rick and Morty API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
clap = { version = "4.0", features = ["derive"] }
rick-and-morty = "0.1.0"