[package]
name = "pickle"
version = "0.1.0"
edition = "2021"
authors = ["Miguel Guarniz"]
description = "Rick and Morty API"

[dependencies]
serde_json = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", features = ["tls"] }
clap = { version = "4.0", features = ["derive"] }
rick-and-morty = { git = "https://github.com/kckeiks/rick-and-morty" }
securestore = "0.100"
uuid = { version = "1.2", features = ["v4"] }
thiserror = "1.0"
moka = { version = "0.9", features = ["future"] }
log = "0.4"
env_logger = "0.9"